--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 [dependencies]
 eframe = "0.19.0"
 fastrand = "1.8.0"
+bincode = "1.3.3"
+
+[dependencies.serde]
+version = "^1.0.0"
+
+[dependencies.serde_derive]
+version = "^1.0.0"
