--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-eframe = "0.19.0"
 fastrand = "1.8.0"
-bincode = "1.3.3"
+bincode = "0.9.2"
+
+[dependencies.eframe]
+version = "0.19.0"
+features = ["serde"]
+
+[dependencies.epaint]
+version = "0.19.0"
+features = ["serde"]
 
 [dependencies.serde]
-version = "^1.0.0"
-
-[dependencies.serde_derive]
-version = "^1.0.0"
+version = "^1"
+features = ["serde_derive"]
