--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2021"
 [dependencies]
 fastrand = "1.8.0"
 bincode = "0.9.2"
+hashbrown = "0.12.3"
+dirs = "4.0"
+serde_json = "1.0"
+rfd = "0.10"
 
 [dependencies.eframe]
-version = "0.19.0"
-features = ["serde"]
-
-[dependencies.epaint]
-version = "0.19.0"
-features = ["serde"]
+# version = "0.19.0"
+git = "https://github.com/emilk/egui.git"
 
 [dependencies.serde]
 version = "^1"
