--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 [dependencies]
 fastrand = "1.8.0"
 bincode = "0.9.2"
-hashbrown = "0.12.3"
 dirs = "4.0"
 serde_json = "1.0"
 rfd = "0.10"
+
+[dependencies.hashbrown]
+version = "0.12.3"
+features = ["serde"]
 
 [dependencies.eframe]
 # version = "0.19.0"
