--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "^1", features = ["serde_derive"] }
+ron = "0.8"
+bincode = "1.3.3"
+
 fastrand = "1.8.0"
-bincode = "0.9.2"
+hashbrown = { version = "0.13.1", features = ["serde"] }
+
 dirs = "4.0"
-serde_json = "1.0"
 rfd = "0.10"
 
-[dependencies.hashbrown]
-version = "0.12.3"
-features = ["serde"]
-
-[dependencies.eframe]
-# version = "0.19.0"
-git = "https://github.com/emilk/egui.git"
-
-[dependencies.serde]
-version = "^1"
-features = ["serde_derive"]
+eframe = { git = "https://github.com/emilk/egui.git" }
+epaint = { git = "https://github.com/emilk/egui.git", features = ["serde"] }
