--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 log-sim-gui = { path = ".." }
 serde = { version = "^1", features = ["serde_derive"] }
-eframe = { git = "https://github.com/emilk/egui.git" }
+eframe = { version = "0.20", features = ["serde"] }
 ron = "0.8"
 bincode = "1.3.3"
 dirs = "4.0"
