Lot's of changes - Changed visual style of buttons and menu's - Entire board can now move around on scene - Introduced a lot of bugs (temporary) - Removed a bunch of features (temporary) - Moved `App::X_menu` and `App::X_panel` to `ui` - Moved all in `preset_placer` to `ui` - Added `graphics::Transform` to tidy up graphics code - Added `settings::Theme`to replace "dark_mode" - Renamed module `native/input` to `native/files` - Renamed module `preset` to `presets` - Renamed module `integration` to `input` - Renamed module `scene` to `board` - Renamed struct `Scene` to `Board` - Renamed struct `Presets` to `Library` - Moved all in `scene::chip` to `scene` - Updated CHANGELOG

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "log-sim-gui"
+name = "logsim"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,5 +12,5 @@ getrandom = "^0.2.8"
 tinyrand = "0.5"
 hashbrown = { version = "0.13.1", features = ["serde"] }
 
-egui = { version = "0.20", features = ["serde"] }
+egui = { version = "0.20.1", features = ["serde"] }
 epaint = { version = "0.20", features = ["serde"] }
